XML parameters loading improvement: in case the String parameter starts by the character tilde '~' than the symbol is replaced by a local home directory. See some valid parameter examples:  * http://myproject.org/dbconfig.xml  * file:///C:/Documents%20and%20Settings/my/app/dbconfig.xml  * ~/app/dbconfig.xml